# Python-Silk-Module

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  custom_build.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  source_list.txt
.github/workflows/: python-build-test.yml  python-publish.yml
pysilk/: __init__.py  pysilk.py  utils.py
src/: __init__.py  _pysilk.cpp  codec.h  main.cpp  pysilk.py
src/pysilk/: __init__.py  __main__.py  pysilk.py  utils.py  wav.py
src/silk/: _pysilk.cpp  codec.cpp  codec.h
src/silk/src/: SKP_Silk_SigProc_FIX.h  SKP_Silk_control_codec_FIX.c  SKP_Silk_dec_API.c
tests/: test.py  test_decode.py  test_encode.py  utils.py
tests/asserts/: output.pcm  target.pcm  target.silk
tests/assets/: output.pcm  target.pcm  target.silk
tests/testmem/: testmem.cpp
tests/testwrite/: testwrite.cpp
