[build-system]
requires = [
    "setuptools>=65.5.1",
    "wheel",
    "pybind11>=2.10.4",
]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "encoder: pysilk encode test",
    "decoder: pysilk decode test",
    "silk: silk file test",
    "wav: wave file test",
    "pcm: pcm file test",
    "sync: sync method",
    "async_: async method"
]