[build-system]
requires = [
    "setuptools~=70.0.0",
    "wheel",
    "pybind11>=2.13.6",
]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "encoder: pysilk encode test",
    "decoder: pysilk decode test",
    "silk: silk file test",
    "wav: wave file test",
    "pcm: pcm file test",
    "sync: sync method",
    "async_: async method"
]