[metadata]
name = pysilk-mod
url = https://github.com/DCZYewen/Python-Silk-Module
project_urls =
    Source Code = https://github.com/DCZYewen/Python-Silk-Module
license = see LICENSE
author = DCZYewen
author_email = contact@basicws.net
maintainer = wyapx
maintainer_email = admin@nullcat.cn
description = Python silk decode/encoder
long_description = Python silk decode/encoder bindings using pybind11

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src
